# alloy

./: .gitignore  Cargo.toml  README.md
scratchpad/: todo.md
src/: app.rs  lib.rs  main.rs
src/core/: character_controller.rs  density_map.rs  grass.rs  grass_texture.rs  gravity.rs  mod.rs  road.rs  skybox.rs  spherical_world.rs  texture.rs  third_person_camera.rs  tree.rs  vegetation_lod.rs
src/input/: mod.rs
src/math/: mod.rs
src/renderer/: cube_renderer.rs  gpu_culling.rs  mod.rs  scene_renderer.rs
src/scene/: camera_system.rs  mod.rs
src/shaders/: cube.metal  cull_instances.metal  grass.metal  road.metal  skybox.metal  tree.metal  triangle.metal  ui.metal
src/ui/: font.rs  mod.rs
tests/: integration_test.rs
