[package]
name = "game-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
objc2 = "0.6.1"
objc2-core-foundation = "0.3.1"
objc2-core-graphics = "0.3.1"
objc2-foundation = "0.3.1"
objc2-metal = "0.3.1"
objc2-quartz-core = "0.3.1"
winit = "0.30.11"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
